--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "react-syntax-highlighter": "^15.5.0",
     "remark": "^14.0.2",
     "remark-gfm": "^3.0.1",
-    "remark-html": "^15.0.1"
+    "remark-html": "^15.0.1",
+    "react-icons": "^4.4.0",
+    "sass": "^1.54.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@types/node": "18.8.4",
@@ -25,6 +28,7 @@
     "@types/react-dom": "18.0.6",
     "eslint": "8.25.0",
     "eslint-config-next": "12.3.1",
+    "babel-plugin-styled-components": "^2.0.7",
     "typescript": "4.8.4"
   }
 }
