--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
     "react-markdown": "^8.0.3",
     "react-syntax-highlighter": "^15.5.0",
     "remark": "^14.0.2",
+    "remark-frontmatter": "^4.0.1",
     "remark-gfm": "^3.0.1",
     "remark-html": "^15.0.1",
-    "react-icons": "^4.4.0",
     "sass": "^1.54.0",
     "styled-components": "^5.3.5"
   },
@@ -26,9 +27,9 @@
     "@types/node": "18.8.4",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.25.0",
     "eslint-config-next": "12.3.1",
-    "babel-plugin-styled-components": "^2.0.7",
     "typescript": "4.8.4"
   }
 }
