--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "react-markdown": "^8.0.3",
     "react-syntax-highlighter": "^15.5.0",
     "remark": "^14.0.2",
+    "remark-directive": "^2.0.1",
     "remark-frontmatter": "^4.0.1",
     "remark-gfm": "^3.0.1",
     "remark-html": "^15.0.1",
+    "remark-wiki-link": "^1.0.4",
     "sass": "^1.54.0",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "unified": "^10.1.2"
   },
   "devDependencies": {
     "@types/node": "18.8.4",
