baby steps into pixi.js

--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "gray-matter": "^4.0.3",
     "instantsearch.css": "^7.2.0",
     "next": "12.3.1",
+    "pixi.js": "^6.5.1",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-instantsearch-dom": "^6.38.0",
     "react-markdown": "^8.0.3",
+    "react-pixi-fiber": "^1.0.4",
     "react-syntax-highlighter": "^15.5.0",
     "remark": "^14.0.2",
     "remark-directive": "^2.0.1",
