--- a/package.json
+++ b/package.json
@@ -11,19 +11,16 @@
   },
   "dependencies": {
     "d3": "^7.6.1",
-    "elasticlunr": "^0.9.5",
+    "date-fns": "^2.29.3",
     "fuse.js": "^6.6.2",
     "gray-matter": "^4.0.3",
-    "instantsearch.css": "^7.2.0",
     "next": "12.3.1",
-    "pixi.js": "^6.5.1",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-instantsearch-dom": "^6.38.0",
     "react-markdown": "^8.0.3",
-    "react-pixi-fiber": "^1.0.4",
     "react-syntax-highlighter": "^15.5.0",
     "remark": "^14.0.2",
     "remark-directive": "^2.0.1",
@@ -33,8 +30,6 @@
     "remark-wiki-link": "^1.0.4",
     "sass": "^1.54.0",
     "styled-components": "^5.3.5",
-    "typesense": "^1.4.2",
-    "typesense-instantsearch-adapter": "^2.4.2",
     "unified": "^10.1.2"
   },
   "devDependencies": {
