--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "d3": "^7.6.1",
     "date-fns": "^2.29.3",
+    "dotenv": "^16.0.3",
     "fuse.js": "^6.6.2",
     "gray-matter": "^4.0.3",
     "next": "12.3.1",
