update to .gitignore, env variables, umami support

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,11 @@
 MarkdownVault/*
 !MarkdownVault/index.md
 
+compose.yml
+public/vaultTree.json
+public/vaultTreeFlat.json
+public/nodeData.json
+
 tmp
 
 # dependencies
