.env for css color theme

--- a/.env.dev
+++ b/.env.dev
@@ -1,5 +1,4 @@
-NEXT_PUBLIC_TITLE=Pywriter | Dev Garden
-NEXT_PUBLIC_SUBTITLE=Welcome to my Dev Garden
-NEXT_PUBLIC_VAULTROOT=C:\Users\wchorski\vscode\nextjs-obsidian-publish\MarkdownVault
-NEXT_PUBLIC_UMAMI_WEBSITE_ID=
-NEXT_PUBLIC_UMAMI_SRC=
+NEXT_PUBLIC_TITLE=DnD | Wiki
+NEXT_PUBLIC_SUBTITLE=A Dance of Matter
+NEXT_PUBLIC_UMAMI_WEBSITE_ID=51cc10c2-9579-49b6-99d4-15f94e103850
+NEXT_PUBLIC_UMAMI_SRC=https://analytics.williamusic.com/umami.js
